[metadata]
name = chatGPT_debugger
version = 0.1.3
author = 5-MinutePython(Jimmy Allison)
author_email = 5minutepython2@gmail.com
description = Debug Python code with ChatGPT3 and get error explanations and corrected code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JimmyAllison
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
  openai
  keyring
  
	
